// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Alert /> should render when [color="blue"] 1`] = `
<_Alert
  className=""
  color="blue"
/>
`;

exports[`<Alert /> should render when [color="green"] 1`] = `
<_Alert
  className=""
  color="green"
/>
`;

exports[`<Alert /> should render when [color="red"] 1`] = `
<_Alert
  className=""
  color="red"
/>
`;
